fixed add/remove and dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ a:visited {
 
 .spinner {
   border: 8px solid #f3f3f3;
-  border-top: 8px solid #3498db;
+  border-top: 8px solid #b4a14e71;
   border-radius: 50%;
   width: 40px;
   height: 40px;
